--- a/vanilla/www/index.html
+++ b/vanilla/www/index.html
@@ -1,23 +1,32 @@
-<html>
-  <head>
-    <title>Capacitor: Vanilla.js</title>
-    <script type="module" src="https://unpkg.com/@ionic/pwa-elements@latest/dist/ionicpwaelements/ionicpwaelements.esm.js"></script>
-    <script nomodule src="https://unpkg.com/@ionic/pwa-elements@latest/dist/ionicpwaelements/ionicpwaelements.js"></script>
-    <script src="capacitor.js"></script>
-    <script src="index.js" type="module"></script>
-    <script type="module">
-      import { takePicture, logToConsole } from './index.js';
+<!DOCTYPE html>
+<html lang="en" dir="ltr">
+<head>
+  <meta charset="UTF-8">
+  <title>Capacitor: Vanilla JS</title>
+  <meta name="viewport" content="viewport-fit=cover, width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no">
+  <meta name="format-detection" content="telephone=no">
+  <meta name="msapplication-tap-highlight" content="no">
 
-      logToConsole();
-      takePicture();
-    </script>
+  <script type="module" src="https://unpkg.com/@ionic/pwa-elements@latest/dist/ionicpwaelements/ionicpwaelements.esm.js"></script>
+  <script nomodule src="https://unpkg.com/@ionic/pwa-elements@latest/dist/ionicpwaelements/ionicpwaelements.js"></script>
+  <script src="capacitor.js"></script>
+  <script>
+    async function takePicture() {
+      const { Camera } = Capacitor.Plugins;
+      const photo = await Camera.getPhoto({
+          quality: 90,
+          resultType: "uri"
+        });
+      
+      const image = document.getElementById("photo");
+      image.src = photo.webPath;
+    }
+  </script>
   </head>
   <body>
     <div id="app">
-      HELLO WORLD
+      <button type="button" onclick="takePicture();">Capture photo</button>
+      <img id="photo"> 
     </div>
-
-    <button type="button" onclick="takePicture();">Click Me!</button>
-    
   </body>
 </html>
